# bragir

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  SECURITY.md  client.py  config.ini.example  constants.py  file.py  languages.py  main.py  messages.py  path_components.py  pyproject.toml  timer.py
.github/workflows/: bump_homebrew_formula.yaml  homebrew_publish.yaml  publish.yml  release.yaml  test.yaml  update_changelog.yaml
.github/workflows/ISSUE_TEMPLATE/: bragir_issue_template.yaml
aurora/: commands.py  constants.py  file.py  messages.py  path_components.py  time.py  transcriber.py  translator.py
aurorababel/: __main__.py  client.py  commands.py  file.py  languages.py  list.py  messages.py  path_components.py  time.py  timer.py  transcriber.py  translator.py
bragir/: __init__.py  __main__.py  client.py  commands.py  config.py  constants.py  directory.py  file.py  languages.py  list.py  logger.py  messages.py  path.py  path_components.py  post_processing.py  time.py  timer.py  token_esitmator.py  transcriber.py  translator.py  types.py
bragir/audio/: chunking.py  grouping.py
bragir/config/: config.py
bragir/constants/: __init__.py  ai.py
bragir/files/: __init__.py  file.py  operations.py
bragir/spinner/: __init__.py
bragir/srt/: __init__.py  srt_part.py
bragir/tracing/: stratergies.py
bragir/transcription/: __init__.py  transcription.py
bragir/translation/: __init__.py  translation.py
logging_configs/: info.json
tests/: commands_test.py  file_test.py  help_test.py  list_test.py  logging_test.py  main_test.py  test_post_processing.py  time_test.py  timer_test.py  token_estimator_test.py  transcriber_test.py
tests/translation/: translation_test.py
