[tool.poetry]
name = "bragir"
version = "1.2.0"
description = "bragir translator cli"
authors = ["Andreas Bergman <andreas@arjancodes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
openai = "^1.3.9"
pydub = "^0.25.1"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bragir = "bragir.__main__:cli"
