[project]
name = "bragir"
version = "1.4.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "openai>=1.54.4",
    "pydantic>=2.9.2",
    "pydub>=0.25.1",
    "ruff>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
bragir = "bragir.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "bragir/logging_configs/*.json",    # Include JSON files in the 'data' folder
    "*.py",                             # Include all Python files
    "py.typed",                         # Include the 'py.typed' file
    "README.md",                        # Include the README file
    "LICENSE",                          # Include the LICENSE file
    "pyproject.toml",                   # Include the pyproject.toml file
]